# dicegame

./: Cargo.toml  names.txt  save.toml
assets/fonts/: BGTV.fnt  Font.fnt  karen_bold.fnt  normal.fnt  special.fnt
assets/shaders/: battle_background.fs
cnt/: FLAGS  dialog.dia
cnt/enemies/: fleshthing.toml
cnt/items/: steak_dinner.toml
cnt/party/: elle.toml  enn.toml  ess.toml  kue.toml  mensh.toml
cnt/rooms/: elevator_ride.toml  home.toml  home_elevator.toml  home_hallway.toml  home_lobby.toml
res/shaders/: battle_background.fs
src/: assets.rs  dice.rs  game.rs  interface.rs  main.rs  res.rs  test.rs  util.rs
src/dice/: dice_set.rs  die.rs
src/game/: battle.rs  content.rs  enemy.rs  party.rs  script.rs  state.rs
src/game/battle/: enemy.rs  health.rs  item.rs  party.rs  text.rs
src/game/content/: dialogue.rs  flags.rs  room.rs  seq.rs
src/game/state/: long.rs  music.rs  short.rs
src/interface/: attack.rs  battle.rs  editor.rs
