[package]
name = "dicegame"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
mlua = { version = "0.11.6", features = ["lua55", "serde"] }
rand = "0.9.2"
raylib = "5.5.1"
rust-embed = { version = "8.11.0", features = ["compression", "include-exclude"] }
serde = { version = "1.0.228", features = ["derive"] }
shuffle = "0.2.1"
smartstring = { version = "1.0.1", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive"] }
toml = { version = "0.9.11", features = ["serde"] }
